fixed breadcrumb spacing

--- a/themes/deadhand/assets/scss/04-components/_breadcrumb.scss
+++ b/themes/deadhand/assets/scss/04-components/_breadcrumb.scss
@@ -3,7 +3,7 @@
 	font-size: 14px;
 	&+&:before{
 		display: inline;
-		padding-right: 5px;
+		padding: 0 5px;
 		content: "/";
 	}
 	&__wrapper {
